testdata/baselines/reference/submodule/conformance/thisPropertyOverridesAccessors.errors.txt
bar.js(1,19): error TS8010: Type annotations can only be used in TypeScript files.


==== foo.ts (0 errors) ====
    class Foo {
        get p() { return 1 }
        set p(value) { }
    }
    
==== bar.js (1 errors) ====
    class Bar extends Foo {
                      ~~~
!!! error TS8010: Type annotations can only be used in TypeScript files.
        constructor() {
            super()
            this.p = 2
        }
    }
    